<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/google_sans"
                    android:textColor="@color/Grey_900"
                    android:textSize="19sp"
                    android:textStyle="bold" />


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.main.MainActivity">

            <FrameLayout
                    android:id="@+id/expense_input_frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="@dimen/margin_8dp"
                            android:layout_marginEnd="@dimen/margin_8dp"
                            android:padding="@dimen/margin_16dp">


                        <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/spent_on_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/spent_on"
                                app:boxBackgroundMode="none">

                            <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/spent_on_et"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/dashed_line_colored"
                                    android:paddingTop="@dimen/margin_16dp"
                                    android:focusable="true"
                                    android:focusableInTouchMode="true"
                                    android:textColor="@color/Grey_900"
                                    android:textStyle="bold" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_16dp"
                                android:hint="@string/spent_how_much"
                                app:boxBackgroundMode="none">

                            <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/amount_et"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/dashed_line_colored"
                                    android:drawableStart="@drawable/ic_rupee_indian"
                                    android:drawablePadding="@dimen/margin_8dp"
                                    android:inputType="number"
                                    android:maxLines="1"
                                    android:paddingTop="@dimen/margin_16dp"
                                    android:textColor="@color/Grey_900"
                                    android:textStyle="bold"
                                    app:drawableTint="@color/Grey_800" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_16dp"
                                android:layout_marginBottom="@dimen/margin_32dp"
                                android:hint="@string/spent_on_date"
                                app:boxBackgroundMode="none">

                            <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/date_et"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/dashed_line_colored"
                                    android:drawableStart="@drawable/round_calendar_today_24"
                                    android:drawablePadding="14dp"
                                    android:focusableInTouchMode="false"
                                    android:inputType="date"
                                    android:maxLines="1"
                                    android:paddingTop="@dimen/margin_16dp"
                                    android:textColor="@color/Grey_900"
                                    android:textStyle="bold"
                                    app:drawableTint="@color/Grey_600" />

                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>


                <ProgressBar
                        android:id="@+id/adding_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" />

            </FrameLayout>


            <com.google.android.material.button.MaterialButton
                    android:id="@+id/done"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginEnd="@dimen/margin_22dp"
                    android:fontFamily="@font/google_sans"
                    android:text="@string/update"
                    app:cornerRadius="8dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/expense_input_frame"
                    android:layout_marginStart="@dimen/margin_22dp"
                    app:icon="@drawable/round_done_outline_24"
                    app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
