<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">


            <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <TextView
                        android:id="@+id/title"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        android:textColor="@color/Grey_900"
                        android:fontFamily="@font/google_sans"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        />


                <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/userImage"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="@dimen/standard"
                        android:layout_marginStart="@dimen/standard"
                        app:civ_border_color="#FFF"
                        app:civ_border_width="2dp"
                        app:civ_shadow="true"
                        android:visibility="gone"
                        android:layout_gravity="start"
                        app:civ_shadow_radius="2"
                        app:civ_shadow_color="#DDD"/>


                <ImageView
                        android:id="@+id/optionsBt"
                        android:layout_gravity="end"
                        android:layout_marginStart="@dimen/standard"
                        android:layout_marginEnd="@dimen/standard"
                        app:srcCompat="@drawable/round_more_vert_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    tools:context=".ui.main.MainActivity">

                <FrameLayout
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/expense_input_frame"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                    <com.google.android.material.card.MaterialCardView
                            android:id="@+id/expense_input_card"
                            android:layout_width="match_parent"
                            android:layout_marginTop="@dimen/standard"
                            android:layout_marginBottom="@dimen/standard"
                            app:strokeWidth="0.5dp"
                            app:cardElevation="0dp"
                            app:cardCornerRadius="0dp"
                            app:strokeColor="@color/Grey_400"
                            android:layout_height="wrap_content">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/standard"
                                android:orientation="vertical">


                            <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/spent_on_layout"
                                    android:layout_width="match_parent"
                                    android:hint="@string/spent_on"
                                    app:hintTextColor="@color/colorPrimary"
                                    app:boxBackgroundMode="none"
                                    android:paddingTop="@dimen/small"
                                    app:boxCollapsedPaddingTop="0dp"
                                    app:boxBackgroundColor="@color/Grey_100"
                                    android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/spent_on_et"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textColor="@color/Grey_900"
                                        android:textStyle="bold"
                                        android:paddingTop="@dimen/half"
                                        android:background="@drawable/dashed_line_bg"
                                        android:fontFamily="@font/google_sans"
                                />
                            </com.google.android.material.textfield.TextInputLayout>


                            <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:hint="@string/spent_how_much"
                                    app:boxBackgroundMode="none"
                                    android:layout_marginTop="@dimen/standard"
                                    app:boxBackgroundColor="@color/Grey_100"
                                    android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/amount_et"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textColor="@color/Grey_900"
                                        android:maxLines="1"
                                        android:textStyle="bold"
                                        android:drawablePadding="@dimen/half"
                                        android:drawableStart="@drawable/ic_rupee_indian"
                                        android:paddingTop="@dimen/half"
                                        android:background="@drawable/dashed_line_bg"
                                        android:inputType="number"
                                        app:drawableTint="@color/Grey_800"
                                        android:fontFamily="@font/google_sans"
                                />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:hint="@string/spent_on_date"
                                    app:boxBackgroundMode="none"
                                    android:layout_marginBottom="@dimen/double_standard"
                                    android:layout_marginTop="@dimen/standard"
                                    app:boxBackgroundColor="@color/Grey_100"
                                    android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/date_et"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textColor="@color/Grey_900"
                                        android:maxLines="1"
                                        android:drawableStart="@drawable/round_calendar_today_24"
                                        android:textStyle="bold"
                                        app:drawableTint="@color/Grey_600"
                                        android:drawablePadding="14dp"
                                        android:focusableInTouchMode="false"
                                        android:paddingTop="@dimen/half"
                                        android:background="@drawable/dashed_line_bg"
                                        android:inputType="date"
                                        android:fontFamily="@font/google_sans"
                                />
                            </com.google.android.material.textfield.TextInputLayout>


                        </LinearLayout>


                    </com.google.android.material.card.MaterialCardView>


                    <ProgressBar
                            android:id="@+id/adding_progress"
                            android:layout_width="wrap_content"
                            android:visibility="gone"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"/>

                </FrameLayout>

                <View android:id="@+id/marginSpacer"
                      android:layout_width="0dp"
                      android:layout_height="1dp"
                      android:layout_marginTop="10dp"
                      app:layout_constraintTop_toBottomOf="@id/expense_input_frame"
                      app:layout_constraintEnd_toEndOf="parent"/>


                <com.google.android.material.button.MaterialButton
                        android:id="@+id/done"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/standard"
                        android:text="@string/done"
                        android:textStyle="bold"
                        app:cornerRadius="5dp"
                        android:visibility="gone"
                        android:fontFamily="@font/google_sans"
                        app:layout_constraintBottom_toTopOf="@id/marginSpacer"
                        app:layout_constraintEnd_toEndOf="@id/expense_input_frame"
                        app:icon="@drawable/round_done_outline_24"
                />

                <include layout="@layout/this_month"/>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <include layout="@layout/profile_bottom_sheet"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content">


    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/standard"
            android:layout_marginStart="@dimen/standard"
            android:layout_marginEnd="@dimen/standard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/colorPrimary"
            app:cardBackgroundColor="@color/primaryScrim"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/current_month"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard"
                    android:layout_marginEnd="@dimen/standard"
                    android:fontFamily="@font/google_sans"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:cornerRadius="5dp"
                    app:icon="@drawable/outline_keyboard_arrow_down_24"
                    app:iconTint="@color/colorPrimary"
                    app:strokeColor="@color/colorPrimary"
                    app:strokeWidth="0dp" />

            <TextView
                    android:id="@+id/totalAmount"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/double_standard"
                    android:fontFamily="@font/google_sans"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"
                    android:gravity="end"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:visibility="visible" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:menu="@menu/bottom_navigation_menu" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>